; ModuleID = '/home/carl/AnghaBench/toxcore/auto_tests/extr_onion_test.c_handle_test_4.c'
source_filename = "/home/carl/AnghaBench/toxcore/auto_tests/extr_onion_test.c_handle_test_4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@crypto_box_NONCEBYTES = common dso_local global i32 0, align 4
@crypto_box_PUBLICKEYBYTES = common dso_local global i32 0, align 4
@crypto_box_MACBYTES = common dso_local global i32 0, align 4
@nonce = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [15 x i8] c"Install gentoo\00", align 1
@handled_test_4 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i8*, i32)* @handle_test_4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_test_4(i8* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_4__*, align 8
  %11 = alloca [15 x i8], align 1
  %12 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %13 = load i8*, i8** %6, align 8
  %14 = bitcast i8* %13 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %14, %struct.TYPE_4__** %10, align 8
  %15 = load i32, i32* %9, align 4
  %16 = sext i32 %15 to i64
  %17 = load i32, i32* @crypto_box_NONCEBYTES, align 4
  %18 = add nsw i32 1, %17
  %19 = load i32, i32* @crypto_box_PUBLICKEYBYTES, align 4
  %20 = add nsw i32 %18, %19
  %21 = sext i32 %20 to i64
  %22 = add i64 %21, 15
  %23 = load i32, i32* @crypto_box_MACBYTES, align 4
  %24 = sext i32 %23 to i64
  %25 = add i64 %22, %24
  %26 = icmp ne i64 %16, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  br label %73

28:                                               ; preds = %4
  %29 = bitcast [15 x i8]* %11 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 1 %29, i8 0, i64 15, i1 false)
  %30 = load i8*, i8** @nonce, align 8
  %31 = load i8*, i8** %8, align 8
  %32 = getelementptr inbounds i8, i8* %31, i64 1
  %33 = load i32, i32* @crypto_box_NONCEBYTES, align 4
  %34 = call i64 @memcmp(i8* %30, i8* %32, i32 %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %28
  store i32 1, i32* %5, align 4
  br label %73

37:                                               ; preds = %28
  %38 = load i8*, i8** %8, align 8
  %39 = getelementptr inbounds i8, i8* %38, i64 1
  %40 = load i32, i32* @crypto_box_NONCEBYTES, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i8, i8* %39, i64 %41
  %43 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %44 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %43, i32 0, i32 0
  %45 = load %struct.TYPE_3__*, %struct.TYPE_3__** %44, align 8
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = load i8*, i8** %8, align 8
  %49 = getelementptr inbounds i8, i8* %48, i64 1
  %50 = load i8*, i8** %8, align 8
  %51 = getelementptr inbounds i8, i8* %50, i64 1
  %52 = load i32, i32* @crypto_box_NONCEBYTES, align 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds i8, i8* %51, i64 %53
  %55 = load i32, i32* @crypto_box_PUBLICKEYBYTES, align 4
  %56 = sext i32 %55 to i64
  %57 = getelementptr inbounds i8, i8* %54, i64 %56
  %58 = load i32, i32* @crypto_box_MACBYTES, align 4
  %59 = sext i32 %58 to i64
  %60 = add i64 15, %59
  %61 = trunc i64 %60 to i32
  %62 = getelementptr inbounds [15 x i8], [15 x i8]* %11, i64 0, i64 0
  %63 = call i32 @decrypt_data(i8* %42, i32 %47, i8* %49, i8* %57, i32 %61, i8* %62)
  store i32 %63, i32* %12, align 4
  %64 = load i32, i32* %12, align 4
  %65 = icmp eq i32 %64, -1
  br i1 %65, label %66, label %67

66:                                               ; preds = %37
  store i32 1, i32* %5, align 4
  br label %73

67:                                               ; preds = %37
  %68 = getelementptr inbounds [15 x i8], [15 x i8]* %11, i64 0, i64 0
  %69 = call i64 @memcmp(i8* %68, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 15)
  %70 = icmp ne i64 %69, 0
  br i1 %70, label %71, label %72

71:                                               ; preds = %67
  store i32 1, i32* %5, align 4
  br label %73

72:                                               ; preds = %67
  store i32 1, i32* @handled_test_4, align 4
  store i32 0, i32* %5, align 4
  br label %73

73:                                               ; preds = %72, %71, %66, %36, %27
  %74 = load i32, i32* %5, align 4
  ret i32 %74
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i64 @memcmp(i8*, i8*, i32) #2

declare dso_local i32 @decrypt_data(i8*, i32, i8*, i8*, i32, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
